# xdfa

./: .clang-format  CMakeLists.txt  README.md  cifar_cnn.cpp  dfa.cpp  local_loss.cpp  mnist_cnn.cpp  mnist_conv.cpp  mnist_dfa.cpp  xnn.cpp
include/: mnist.hpp
include/xdfa/: activation.hpp  connection.hpp  evaluation.hpp  function.hpp  types.hpp  utils.hpp  xdfa.hpp
include/xnn/: dataset.hpp  function.hpp  functions.hpp  initializer.hpp  initializers.hpp  layer.hpp  layers.hpp  links.hpp  optimizer.hpp  optimizers.hpp  types.hpp  utils.hpp  xnn.hpp
include/xnn/datasets/: cifar10.hpp  mnist.hpp
include/xnn/functions/: activation.hpp  connection.hpp  evaluation.hpp  loss.hpp  manipulation.hpp  miscellaneous.hpp  noise.hpp  pooling.hpp
include/xnn/functions/activation/: leaky_relu.hpp  relu.hpp  sigmoid.hpp  softmax.hpp  tanh.hpp
include/xnn/functions/connection/: convolution.hpp  linear.hpp  linear_feedback.hpp
include/xnn/functions/evaluation/: accuracy.hpp
include/xnn/functions/loss/: cross_entropy.hpp  mean_squared_error.hpp  (+1 more)
include/xnn/initializers/: matrix.hpp  normal.hpp
include/xnn/layers/: activation.hpp  connection.hpp  evaluation.hpp  loss.hpp  manipulation.hpp  miscellaneous.hpp  network.hpp  noise.hpp  pooling.hpp
include/xnn/loaders/: mnist.hpp
include/xnn/optimizers/: adam.hpp  sgd.hpp
include/xnn/utils/: convolution.hpp  helpers.hpp  xtensor.hpp
tests/: CMakeLists.txt  doctest-helper.h
tests/functions/connection/: convolution.cpp
tests/functions/pooling/: average_pooling.cpp  max_pooling.cpp
tests/utils/: convolution.cpp
(+29 files in other folders)
