CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

OPTION(BUILD_XNN_TESTS "Build XNN Tests" ON)

SET(PROJECT_NAME XNN)
PROJECT(${PROJECT_NAME})
SET(XNN_VERSION_MAJOR 0)
SET(XNN_VERSION_MINOR 0)
SET(XNN_VERSION_PATCH 0)

INCLUDE(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-std=c++14" STD_CXX14)
if (STD_CXX14)
  ADD_DEFINITIONS("-std=c++14")
else()
  ADD_DEFINITIONS("-std=c++1y")
endif()

INCLUDE_DIRECTORIES(include)

ADD_SUBDIRECTORY(tests)
